--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="settings_write_timeout">Write timeout (ms)</string>
+    <string name="settings_id_read_timeout">ID read timeout (ms)</string>
     <string name="action_settings">Settings</string>
 </resources>
